--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li ><a href="" class="headerli">Blog</a></li>
                 <li ><a href="" class="headerli">Pricing</a></li>
                 
-                <li ><a href="" class="headerli" id="register">Register Now-></a></li>
+                <li ><a href="" class="headerli" id="register">Register Now<i class="fa-solid fa-arrow-right" id="resicon"></i></a></li>
             </ul>
         </div>
     </header>
